force-app/main/default/objects/Project_Milestone__c/Project_Milestone__c.object-meta.xml
<CustomObject>
    <label>Project_Milestone</label>
    <nameField>
        <label>Project_Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project_Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>