force-app/main/default/objects/Project_Milestone__c/fields/Completion_Percent_Value__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percent_Value__c</fullName>
    <formula>IF(
  Total_Tasks__c= 0,
  0,
  ROUND(
    ((Total_Tasks__c- Incomplete_Tasks__c) / Total_Tasks__c) * 100,
    0
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Percent Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>