force-app/main/default/objects/Project_Milestone__c/fields/Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percentage__c</fullName>
    <formula>IF(
  Total_Tasks__c = 0,
  0,
  ((Total_Tasks__c - Incomplete_Tasks__c) / Total_Tasks__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>