force-app/main/default/objects/Project_Milestone__c/fields/Incomplete_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Tasks__c</fullName>
    <label>Incomplete Tasks</label>
    <summaryFilterItems>
        <field>Project_Task__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>