force-app/main/default/objects/Project_Milestone__c/fields/Milestone_Status__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Status__c</fullName>
    <formula>CASE(
  Completion_Percentage__c,
  0, &quot;Not Started&quot;,
  100, &quot;Complete&quot;,
  &quot;In Progress&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Status</label>
    <type>Text</type>
</CustomField>