force-app/main/default/objects/Project_Milestone__c/fields/Total_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Tasks__c</fullName>
    <label>Total Tasks</label>
    <summaryForeignKey>Project_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>